2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&read_am_file): Keep $cond_string up to date.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&define_variable): Use &macro_define.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Don't lose the location if we
	redefine a variable.
	Don't push all the variables in @var_list, let...
	(&read_am_file, &file_contents): ... do it.
	(&define_pretty_variable): Use macro_define.
	(&am_install_var): Delete the value of variables being redefined
	to pacify &macro_define which checks that variables are not
	doubly defined.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&conditional_dump): Rename as...
	(&variables_dump): this.  Use...
	(&variable_dump): this new sub.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Maintain $cond_string sync with
	@cond_stack.
	Output rules only if not under `FALSE'.
	Define variables under $cond_string.
	* scripts.am: For the time being if/endif does not work properly
	with macros.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (IF_PATTERN): Unobfuscate the parens.
	(ENDIF_PATTERN): Allow a condition to be specified.
	(&file_contents): Use a @cond_stack.
	(&transform): At least for an easy transition, also transform
	%?FOO% and %!FOO%, as suggested by Lars.
	* scripts.am: First test bed for static if/endif use.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Use rule_define.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Don't rely on $1.
	Initialize the variable.
	Set its Automakism only if not defined or if given to the user.
	When concatenating values, insert a separator only if the value
	was not empty.
	(&read_am_file): When dumping the @var_list, skip Automake
	variables.
	(&file_contents): Use macro_define.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&rule_define): Extract from...