@@ -1,5 +1,12 @@
 2001-03-23  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&read_am_file): Define the variables in a single
+	shot.
+	Factor the $saw_bk code.
+
+	
+2001-03-23  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&read_am_file): Keep $cond_string up to date.
 
 	
